# DigitRecog

./: App.cpp  App.h  Buttons.cpp  Buttons.h  CMakeLists.txt  DigitRecog.cbp  DigitRecog.depend  DigitRecog.layout  Grid.cpp  Grid.h  main.cpp
Engine/: Engine.cpp  Engine.h  ErrorHandler.h  Mouse.cpp  Mouse.h
Engine/GL/: glTex.cpp  glTex.h
Engine/GUI/: Button.cpp  Button.h  Label.cpp  Label.h  LabeledButton.cpp  LabeledButton.h
Engine/Math/: Collision.h  Matrix.h  Transformation.h  Vec2D.h
Engine/SDL/: Font.cpp  Font.h  SDL_SurfacePtr.cpp  SDL_SurfacePtr.h
